force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/tc9_eau__Lodgement_Item_AU__c.object-meta.xml
<CustomObject>
    <label>Lodgement Item AU</label>
    <nameField>
        <displayFormat>LIAU-{0000000000}</displayFormat>
        <label>Lodgement Item AU Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lodgement Items AU</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>