force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Address_Line_1__c</fullName>
    <description>Address Line 1 of the related payee</description>
    <inlineHelpText>Address Line 1 of the related payee</inlineHelpText>
    <label>Payee Address Line 1</label>
    <length>38</length>
    <type>Text</type>
</CustomField>