force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Allowance_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Allowance_Amount__c</fullName>
    <description>The YTD Allowance Amount for the corresponding STP Allowance Type.</description>
    <inlineHelpText>The YTD Allowance Amount for the corresponding STP Allowance Type.</inlineHelpText>
    <label>Allowance Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>