force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Allowance_Details__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Allowance_Details__c</fullName>
    <description>Details of allowances, allowance types and amounts</description>
    <inlineHelpText>Gross earnings whilst categorised as a Working Holiday Maker</inlineHelpText>
    <label>Allowance Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>