force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Allowance_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Allowance_Other_Description__c</fullName>
    <description>The description where the Allowance Type is Other.</description>
    <inlineHelpText>The description where the Allowance Type is Other.</inlineHelpText>
    <label>Allowance Other Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>