force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Allowance_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Allowance_Type__c</fullName>
    <description>The STP Allowance Type as defined by the ATO.</description>
    <inlineHelpText>The STP Allowance Type as defined by the ATO.</inlineHelpText>
    <label>Allowance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__STP2_Allowance_Type_Picklists</valueSetName>
    </valueSet>
</CustomField>