force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Allowances_Not_Applicable__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Allowances_Not_Applicable__c</fullName>
    <description>The sum of all not applicable allowances YTD.</description>
    <inlineHelpText>The sum of all not applicable allowances YTD.</inlineHelpText>
    <label>Allowances - Not Applicable</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>