force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__ATO_Income_Classification__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__ATO_Income_Classification__c</fullName>
    <description>The ATO Income Classification to be reported via STP in the Income Stream Collection.</description>
    <inlineHelpText>The ATO Income Classification to be reported via STP in the Income Stream Collection.</inlineHelpText>
    <label>ATO Income Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__ATO_Income_Classification</valueSetName>
    </valueSet>
</CustomField>