force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Basis_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Basis_of_Payment__c</fullName>
    <description>Payee Basis of Payment Code</description>
    <inlineHelpText>Payee Basis of Payment Code</inlineHelpText>
    <label>Basis of Payment Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>