force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Benefit_Category__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Benefit_Category__c</fullName>
    <description>Benefit Category</description>
    <inlineHelpText>Benefit Category</inlineHelpText>
    <label>Benefit Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>