force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Bonus_and_Commission__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Bonus_and_Commission__c</fullName>
    <description>The total value of Bonus and Commission.</description>
    <inlineHelpText>The total value of Bonus and Commission.</inlineHelpText>
    <label>Bonus and Commission</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>