force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Cessation_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Cessation_Date__c</fullName>
    <description>Cessation Date of the related Payee</description>
    <inlineHelpText>Cessation Date of the related Payee</inlineHelpText>
    <label>Payee Cessation Date</label>
    <type>Date</type>
</CustomField>