force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Cessation_Reason__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Cessation_Reason__c</fullName>
    <description>Reason for ending employment</description>
    <inlineHelpText>Reason for ending employment</inlineHelpText>
    <label>Payee Cessation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>