force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Cessation_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Cessation_Reason_Code__c</fullName>
    <description>The payee cessation reason code.</description>
    <inlineHelpText>The payee Termination reason code.</inlineHelpText>
    <label>Cessation Reason Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>