force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Commencement_Date__c</fullName>
    <description>Commencement Date of the related Payee</description>
    <inlineHelpText>Commencement Date of the related Payee</inlineHelpText>
    <label>Payee Commencement Date</label>
    <type>Date</type>
</CustomField>