force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Confirmed_On__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Confirmed_On__c</fullName>
    <label>Confirmed On</label>
    <type>Date</type>
</CustomField>