force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Contractor_ABN__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Contractor_ABN__c</fullName>
    <description>ABN of the related Payee</description>
    <inlineHelpText>ABN of the related Payee</inlineHelpText>
    <label>Contractor ABN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>