force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Country_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Country_Code__c</fullName>
    <description>Country Code of the related Payee</description>
    <inlineHelpText>Country Code of the related Payee</inlineHelpText>
    <label>Payee Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>