force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__CSA_Deduction__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__CSA_Deduction__c</fullName>
    <description>The total value of Child Support deductions.</description>
    <inlineHelpText>The total value of Child Support deductions.</inlineHelpText>
    <label>CSA Deduction</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>