force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Date_Time_Extracted__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Date_Time_Extracted__c</fullName>
    <description>Date and time the SuperStream data was last extracted to .csv</description>
    <label>Date Time Extracted</label>
    <type>DateTime</type>
</CustomField>