force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Dec_Acceptance_Indicator__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Dec_Acceptance_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Payee Declaration Acceptance Indicator</description>
    <inlineHelpText>Payee Declaration Acceptance Indicator</inlineHelpText>
    <label>Payee Declaration Acceptance Indicator</label>
    <type>Checkbox</type>
</CustomField>