force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Dec_Date_Signed__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Dec_Date_Signed__c</fullName>
    <description>Payee Date Declaration Accepted</description>
    <inlineHelpText>Payee Date Declaration Accepted</inlineHelpText>
    <label>Payee Date Declaration Signed</label>
    <type>Date</type>
</CustomField>