force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Deduction_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Deduction_Amount__c</fullName>
    <description>The YTD Deduction Amount for the corresponding STP Deduction Type.</description>
    <inlineHelpText>The YTD Deduction Amount for the corresponding STP Deduction Type.</inlineHelpText>
    <label>Deduction Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>