force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Deduction_Details__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Deduction_Details__c</fullName>
    <description>Details of deductions and amounts</description>
    <inlineHelpText>Details of deductions and amounts</inlineHelpText>
    <label>Deduction Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>