force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Deductions_Pre_tax__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Deductions_Pre_tax__c</fullName>
    <description>The sum of all pre-tax deductions YTD.</description>
    <inlineHelpText>The sum of all pre-tax deductions YTD.</inlineHelpText>
    <label>Deductions - Pre-tax</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>