force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Directors_Fees__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Directors_Fees__c</fullName>
    <description>The total value of Directors Fees.</description>
    <inlineHelpText>The total value of Directors Fees.</inlineHelpText>
    <label>Directors Fees</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>