force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Email__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Email__c</fullName>
    <description>Email address of the related Payee</description>
    <inlineHelpText>Email address of the related Payee</inlineHelpText>
    <label>Payee E-mail Address</label>
    <type>Email</type>
</CustomField>