force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Employer_Additional_Super__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Employer_Additional_Super__c</fullName>
    <description>Employer additional super contributions which were employee influenced</description>
    <inlineHelpText>Employer additional super contributions which were employee influenced</inlineHelpText>
    <label>Employer Additional Super</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>