force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Employment_Location__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Employment_Location__c</fullName>
    <description>Employment Location</description>
    <inlineHelpText>Employment Location</inlineHelpText>
    <label>Employment Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>