force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Employment_Status__c</fullName>
    <description>Employment Status</description>
    <inlineHelpText>Employment Status</inlineHelpText>
    <label>Employment Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>