force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__ETP_Non_Taxable_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__ETP_Non_Taxable_Amount__c</fullName>
    <description>The YTD  Non Taxable ETP amount for the corresponding ETP Type.</description>
    <inlineHelpText>The YTD  Non Taxable ETP amount for the corresponding ETP Type.</inlineHelpText>
    <label>ETP Non Taxable Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>