force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__ETP_PAYGW_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__ETP_PAYGW_Amount__c</fullName>
    <description>The total amount of PAYG attributed to ETPs</description>
    <inlineHelpText>The total amount of PAYG attributed to ETPs</inlineHelpText>
    <label>Payee Total ETP PAYGW Amount</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>