force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__ETP_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__ETP_Payment_Date__c</fullName>
    <description>ETP Payment Date</description>
    <inlineHelpText>ETP Payment Date</inlineHelpText>
    <label>Payee ETP Payment Date</label>
    <type>Date</type>
</CustomField>