force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__ETP_Tax_Year__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__ETP_Tax_Year__c</fullName>
    <formula>If ( MONTH ( tc9_eau__ETP_Payment_Date__c ) &gt; 6 , DATE ( YEAR ( tc9_eau__ETP_Payment_Date__c) , 7 , 1 ) , DATE ( YEAR ( tc9_eau__ETP_Payment_Date__c ) -1 , 7 , 1 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETP Tax Year</label>
    <type>Date</type>
</CustomField>