force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__ETPs_Taxable__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__ETPs_Taxable__c</fullName>
    <description>The sum of all taxable ETPs YTD.</description>
    <inlineHelpText>The sum of all taxable ETPs YTD.</inlineHelpText>
    <label>ETPs - Taxable</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>