force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Event_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Event_Type__c</fullName>
    <description>The type of lodgement event this record is related to</description>
    <inlineHelpText>The type of lodgement event this record is related to</inlineHelpText>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pay Event</fullName>
            </value>
            <value>
                <fullName>Update Event</fullName>
            </value>
            <value>
                <fullName>Full File Replacement</fullName>
            </value>
            <value>
                <fullName>Retrieve Funds</fullName>
            </value>
            <value>
                <fullName>Validate Funds</fullName>
            </value>
            <value>
                <fullName>Validate Employer</fullName>
            </value>
            <value>
                <fullName>Validate Contributions</fullName>
            </value>
            <value>
                <fullName>Submit Contributions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>