force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Exempt_Foreign_Income_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Exempt_Foreign_Income_Amount__c</fullName>
    <description>Total EFI YTD</description>
    <inlineHelpText>Total EFI YTD</inlineHelpText>
    <label>Payee Exempt Foreign Income Amount</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>