force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__FE_Gross_Payment__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__FE_Gross_Payment__c</fullName>
    <description>Total Foreign Gross YTD</description>
    <inlineHelpText>Total Foreign Gross YTD</inlineHelpText>
    <label>Payee Gross Payments Foreign Employment</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>