force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__FE_Total_PAYGW_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__FE_Total_PAYGW_Amount__c</fullName>
    <description>Total FEI PAYGW YTD</description>
    <inlineHelpText>Total FEI W2W YTD</inlineHelpText>
    <label>Payee Total FEI PAYGW Amount</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>