force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Final_Event_Indicator__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Final_Event_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the Payee has received their final payment</description>
    <inlineHelpText>Indicates the Payee has received their final payment</inlineHelpText>
    <label>Final Event Indicator</label>
    <type>Checkbox</type>
</CustomField>