force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Foreign_Empl_Income_Foreign_Tax_Paid__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Foreign_Empl_Income_Foreign_Tax_Paid__c</fullName>
    <label>Foreign Empl Income Foreign Tax Paid</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>