force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Gender__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Gender__c</fullName>
    <description>Payee Gender</description>
    <inlineHelpText>Payee Gender</inlineHelpText>
    <label>Gender</label>
    <length>100</length>
    <type>Text</type>
</CustomField>