force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Income_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Income_Country_Code__c</fullName>
    <description>The country code reported in the Income Stream Collection.</description>
    <inlineHelpText>The country code reported in the Income Stream Collection.</inlineHelpText>
    <label>Income Country Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>