force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Income_Stream_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Income_Stream_Code__c</fullName>
    <description>The Income Stream Code as defined by the ATO.</description>
    <inlineHelpText>The Income Stream Code as defined by the ATO.</inlineHelpText>
    <label>Income Stream Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>