force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Income_Stream_Collection_Record__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Income_Stream_Collection_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent Income Stream Collection Lodgement Item AU record.</description>
    <inlineHelpText>The parent Income Stream Collection Lodgement Item AU record.</inlineHelpText>
    <label>Income Stream Collection Record</label>
    <referenceTo>tc9_eau__Lodgement_Item_AU__c</referenceTo>
    <relationshipLabel>Lodgement Items AU</relationshipLabel>
    <relationshipName>Lodgement_Items_AU</relationshipName>
    <type>Lookup</type>
</CustomField>