force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__JPDA_EFI_Tax_Paid__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__JPDA_EFI_Tax_Paid__c</fullName>
    <description>Total JPDA Tax Paid YTD</description>
    <inlineHelpText>Total JPDA Tax Paid YTD</inlineHelpText>
    <label>JPDA Foreign Empl Income Foreign Taxpaid</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>