force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__JPDA_FEI_Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__JPDA_FEI_Gross_Amount__c</fullName>
    <description>Payee Total JPDA Gross YTD</description>
    <inlineHelpText>Payee Total JPDA Gross YTD</inlineHelpText>
    <label>JPDA Foreign Employment Income Gross Amt</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>