force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Leave_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Leave_Amount__c</fullName>
    <description>The YTD Paid Leave amount for the corresponding STP Leave Type.</description>
    <inlineHelpText>The YTD Paid Leave amount for the corresponding STP Leave Type.</inlineHelpText>
    <label>Leave Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>