force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__LH_Gross_Payment__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__LH_Gross_Payment__c</fullName>
    <description>Total Labour Hire Gross YTD</description>
    <inlineHelpText>Total Labour Hire Gross YTD</inlineHelpText>
    <label>Payee Labour Hire Gross Payment</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>