force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__LHire_PAYGW_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__LHire_PAYGW_Amount__c</fullName>
    <description>Total Labour Hire PAYGW YTD</description>
    <inlineHelpText>Total Labour Hire W2W YTD</inlineHelpText>
    <label>Payee Total Labour Hire PAYGW Amount</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>