force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Lodgement_AU__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Lodgement_AU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent Lodgement AU record</description>
    <inlineHelpText>The parent Lodgement AU record</inlineHelpText>
    <label>Lodgement AU</label>
    <referenceTo>tc9_eau__Lodgement_AU__c</referenceTo>
    <relationshipLabel>Lodgement Items AU</relationshipLabel>
    <relationshipName>Lodgement_AU_Items</relationshipName>
    <type>Lookup</type>
</CustomField>