force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Lodgement_AU_Header__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Lodgement_AU_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Header Lodgement AU record this Lodgement Item is related to. A Lodgement Item AU record can have one parent and one header record.</description>
    <inlineHelpText>The Header Lodgement AU record this Lodgement Item is related to. A Lodgement Item AU record can have one parent and one header record.</inlineHelpText>
    <label>Lodgement AU Header Record</label>
    <referenceTo>tc9_eau__Lodgement_AU__c</referenceTo>
    <relationshipLabel>Lodgement Items AU (Lodgement AU Header Record)</relationshipLabel>
    <relationshipName>Lodgement_Items_AU</relationshipName>
    <type>Lookup</type>
</CustomField>