force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__LSA_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__LSA_Type__c</fullName>
    <description>Lump Sum A Type</description>
    <inlineHelpText>Lump Sum A Type</inlineHelpText>
    <label>Payee Lump Sum Payment A Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>T</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>