force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__LSE_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__LSE_Amount__c</fullName>
    <description>Lump Sum E Amount</description>
    <inlineHelpText>Lump Sum E Amount</inlineHelpText>
    <label>Payee Lump Sum Payment E</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>